--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <div class="menu-btn">
                 <div class="menu-btn__lines"></div>
             </div>
-            <nav> 
+            <nav class="sidenav"> 
                 <ul class="menu-items">
                     <li><a href="#" class="menu-item">Home</a></li>
                     <li><a href="#" class="menu-item">Graphic Design</a></li>
@@ -57,7 +57,7 @@
 
 separate code
 
-<header class="parent-header">
+<!-- <header class="parent-header">
     <a href="#">LOGO</a>
     <div class="parent-menu-btn">
       <div class="parent-menu-btn__lines"></div>
@@ -68,7 +68,7 @@ separate code
       <li><a href="#" class="parent-menu-item">Contact</a></li>
       <li><a href="#" class="parent-menu-item">About</a></li>
     </ul>
-  </header>
+  </header> -->
 </body>
     
 <script src="main.js"></script>
