--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="main.js">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <script src="libs/jquery-3.5.1.min.js"></script>
 
 
     <title>Home</title>
@@ -55,7 +55,7 @@
 
 </div>
 
-separate code
+
 
 <!-- <header class="parent-header">
     <a href="#">LOGO</a>
@@ -69,7 +69,9 @@ separate code
       <li><a href="#" class="parent-menu-item">About</a></li>
     </ul>
   </header> -->
-</body>
+
+    
+
     
 <script src="main.js"></script>
 </body>
