--- a/about/index.html
+++ b/about/index.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@900&family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
 
 
-    <title>Photography</title>
+    <title>About</title>
 </head>
 <body>
 <div class="wrapper">
@@ -30,10 +30,10 @@
     
     
     <nav class="topnav">
-        <a  href="../graphic_design/">Graphic Design</a>
-        <a  href="../photography/">Photography</a>
-        <a class="active"href="../web_development/">Web Development</a>
-        <a href="../about/">About</a>
+        <a href="../graphic_design/">Graphic Design</a>
+        <a href="../photography/">Photography</a>
+        <a href="../web_development/">Web Development</a>
+        <a class="active" href="../about/">About</a>
         <a href="../contact/">Contact</a>
     </nav>
 </header>
@@ -53,22 +53,7 @@
     </div>    
 </nav>
 </div>
-<main>
-    <div class="portfolio"> 
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-        <img class="test-img" src="https://picsum.photos/1280/720" alt="">
-    </div>
-</main>
+
    
 
 </body>
