still need help

--- a/index.html
+++ b/index.html
@@ -51,15 +51,17 @@
             <img class="icons-side" src="images/linkedin.jpg" alt="linkedin-icon">
         </div>    
     </nav>
-    
-    <main>
-        <div class="hero-text"> 
-            <p>Purely Aesthetic</p>
-        </div>
-        </main>
+ 
 
 </div>
-
+   
+    <main>
+        <div class="img">
+                <div class="hero-text"> 
+                    <p>I have to find a good background image later. This button is purely aesthetic</p>
+                </div>
+        </div>
+    </main>
 <script src="main.js"></script>
 </body>
 </html>
