--- a/about/index.html
+++ b/about/index.html
@@ -58,7 +58,7 @@
 <div class="about">
 <h1>Name at the top</h1> 
     <p>
-    It all started when I was born. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    It all started when I was born. This is my portfolio and I'm working to become a well rounded graphic astist at Columbia College Chicago</p>
 
 </div>
    
